testing the paragraph

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <main>
     <h1>Joseph Israel | WDD 130</h1>
     <img src="images/profile.webp" alt="A picture image of Joseph">
-    <p>Hello! My name is Joseph Israel, 
-        I am from Nigeria and i am residing in the United Arab Emirates, 
-        I love to meet new people and today iam very happy to welcome you to my web page. </p>
+    <p>Hello! My name is Joseph Israel, </p>
+    <p>I am from Nigeria and i am residing in the United Arab Emirates,</p>
+    <p>I love to meet new people and today iam very happy to welcome you to my web page.</p>
 </main>
 <footer>
     <p>©2023 🌴 Joseph Israel 🌴 Abu Dhabi, United Arab Emirates</p>
