--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </header>
 <main>
     <h1>Joseph Israel | WDD 130</h1>
-    <img src="images/profile.webp" alt="A picture image of Joseph">
+    <img src="images/profile.webp" alt="A picture image of Joseph" width="200">
     <p>Hello! My name is Joseph Israel, </p>
     <p>I am from Nigeria and i am residing in the United Arab Emirates,</p>
     <p>I love to meet new people and today iam very happy to welcome you to my web page.</p>
