--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYP html>
+<!DOCTYPE html>
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
@@ -6,7 +6,6 @@
         <title>Joseph Israel | WDD 130</title>
     </head>
     <body>
-    </body>
         <header>
             <nav>
                 <a href="#">Home</a>
