--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Joseph Israel | WDD 130</title>
+        <meta namw="description" content="This is a site of Joseph Israel, for testing his webdesign skills, course name is wdd130 of byui.">
+        <meta name="author" contact="Joseph Israel">
+        
     </head>
     <body>
         <header>
@@ -20,6 +23,11 @@
             <p>I am from Nigeria and i am residing in the United Arab Emirates,</p>
             <p>I love to meet new people and today iam very happy to welcome you to my web page.</p>
         </main>
+        <aside>
+            <h2>Abu Dhabi</h2>
+            <img src="images/abudhabi.webp" alt="image of abudhabi city">
+            <p>Abu Dhabi, the capital of the United Arab Emirates, sits off the mainland on an island in the Persian (Arabian) Gulf. Its focus on oil exports and commerce is reflected by the skylines modern towers and shopping megacenters such as Abu Dhabi and Marina malls.</p>
+        </aside>
         <footer>
             <p>©2023 🌴 Joseph Israel 🌴 Abu Dhabi, United Arab Emirates</p>
         </footer>
