--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Joseph Israel | WDD 130</title>
-        <meta namw="description" content="This is a site of Joseph Israel, for testing his webdesign skills, course name is wdd130 of byui.">
+        <meta name="description" content="This is a site of Joseph Israel, for testing his webdesign skills, course name is wdd130 of byui.">
         <meta name="author" contact="Joseph Israel">
+        <link rel="stylesheet" href="styles/styles.css">
         
     </head>
     <body>
