--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Life Adventure | Joseph Israel</title>
+    <title> Rafting Site Plan | Joseph Israel</title>
     <meta name="description" content="Rafting project to provide student with blue print of website development">
     <meta name="author" content="Joseph israel">
     <link rel="stylesheet" href="styles/site-plan-rafting.css">
