--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -33,6 +33,7 @@
 
         <h3>Typography</h3>
         <h4>Headings Example Font</h4>
+        <h4>Normal Text/Paragraph Example Font</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat!</p>
         <h4>Colored Callout Example Font</h4>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est, tempora.
