--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -1,60 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Rafting Site Plan | Joseph Israel</title>
-    <meta name="description" content="Rafting project to provide student with blue print of website development">
-    <meta name="author" content="Joseph israel">
-    <link rel="stylesheet" href="styles/site-plan-rafting.css">
-</head>
-<body>
-    <header>
-        <h1>Rafting site Plan</h1>
-        <div>Joseph U Israel</div>
-    </header>
-    <main>
-        <h2>Overview</h2>
+<html lang="zxx">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title> Rafting Site Plan | Joseph Israel</title>
+        <meta name="description" content="Rafting project to provide student with blue print of website development">
+        <meta name="author" content="Joseph israel">
+        <link rel="stylesheet" href="styles/site-plan-rafting.css">
+    </head>
+    <body>
+        <header>
+            <h1>Rafting site Plan</h1>
+            <div>Joseph U Israel</div>
+        </header>
+        <main>
+            <h2>Overview</h2>
 
-        <h3>Purpose</h3>
-        <p>We are reliable and trusted water rafting company, with over 40years guiding adventurous people to fufil their dream</p>
-        <h3>Audience</h3>
-        <p>Our clients spread across various industries and works of life, we are happy to announce the student package for adventurous high school individuals.</p>
-        <h2>Branding</h2>
-        <h3>Website Logo</h3>
-        <img src="images/life.jpg" alt="Life Adventure Logo">
-        <h2>Style Guide</h2>
-        <h3>Color Palette</h3>
-        <p>primary colors ---sunglow: #ffc857ff</p>
-        <p>secondry colors ---burnt-sienna: #e9724cff</p>
-        <p>ascent1 colors --cardinal: #c5283dff</p>
-        <p>ascent2 colors --rich-black: #011627ff</p>
-        <p>color Palette<a href="https://coolors.co/ffc857-e9724c-c5283d-011627-0a122a" target="_blank">https://coolors.co/ffc857-e9724c-c5283d-011627-0a122a</a>
+            <h3>Purpose</h3>
+            <p>We are reliable and trusted water rafting company, with over 40years guiding adventurous people to fufil their dream</p>
+            <h3>Audience</h3>
+            <p>Our clients spread across various industries and works of life, we are happy to announce the student package for adventurous high school individuals.</p>
+            <h2>Branding</h2>
+            <h3>Website Logo</h3>
+                <img src="images/life.jpg" alt="Life Adventure Logo">
+            <h2>Style Guide</h2>
+            <h3>Color Palette</h3>
+            <p>primary colors ---sunglow: #ffc857ff</p>
+            <p>secondry colors ---burnt-sienna: #e9724cff</p>
+            <p>ascent1 colors --cardinal: #c5283dff</p>
+            <p>ascent2 colors --rich-black: #011627ff</p>
+            <p>color Palette<a href="https://coolors.co/ffc857-e9724c-c5283d-011627-0a122a" target="_blank">https://coolors.co/ffc857-e9724c-c5283d-011627-0a122a</a>
 
-        <h3>Typography</h3>
-        <h4>Headings Example Font</h4>
-        <h4>Normal Text/Paragraph Example Font</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat!</p>
-        <h4>Colored Callout Example Font</h4>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est, tempora.
-        </p>
-        <h3>Navigation</h3>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">About Us</a>
-            <a href="#">Trips</a>
-            <a href="#">Contact Us</a>
-        </nav>
-        <h2>Wireframes</h2>
-        <h3>Home Page Wireframe</h3>
-        <imag src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Home Page Wireframe Example Design" width="700">
-        <h3>About Us Page Wireframe</h3>
-        <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design" width="700">
+            <h3>Typography</h3>
+            <h4>Headings Example Font</h4>
+            <h4>Normal Text/Paragraph Example Font</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat!</p>
+            <h4>Colored Callout Example Font</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est, tempora.
+            </p>
+            <h3>Navigation</h3>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">About Us</a>
+                <a href="#">Trips</a>
+                <a href="#">Contact Us</a>
+            </nav>
+            <h2>Wireframes</h2>
+            <h3>Home Page Wireframe</h3>
+            <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Home Page Wireframe Example Design" width="700">
+            <h3>About Us Page Wireframe</h3>
+            <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design" width="700">
 
-    </main>
-    
-</body>
-<footer>
-    <p>©2023 | Rafting Site Document | Joseph Israel | WDD 130</p>
-</footer>
+        </main>
+        <footer>
+            <p>©2023 | Rafting Site Document | Joseph Israel | WDD 130</p>
+        </footer>
+    </body>
 </html>
