--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <nav>
                 <a href="#">Home</a>
-                <a href="wwr/">White Water Rafting Website</a>
+                <a href="wwr/about.html">About Us</a>
                 <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
                 <a href="https://www.linkedin.com">linkedin</a>
                 <a href="https://www.facebook.com/">facebook</a>
