home page and about us work

--- a/index.html
+++ b/index.html
@@ -19,23 +19,25 @@
                 <a href="https://www.facebook.com/">facebook</a>
             </nav>
         </header>
-        <main>
-            <h1>Joseph Israel | WDD 130</h1>
-            <img src="images/profile.webp" alt="A picture image of Joseph" width="200">
-            <p>Hello! My name is Joseph Israel, </p>
-            <p>I am from Nigeria and i am residing in the United Arab Emirates, I love to meet new people and today iam very happy to welcome you to my web page. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores provident quaerat, ipsam eveniet esse facere eaque doloribus laboriosam minima sunt molestias similique officiis maxime ea suscipit atque, quas nihil est! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem reiciendis a recusandae culpa saepe sapiente rem blanditiis quia vel officia aliquid molestiae ut inventore, consequatur perferendis est illum possimus eius.</p>
-            <ul class="box">
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple?lang=eng" target="_blank">Aba Nigeria Temple</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/adelaide-australia-temple?lang=eng" target="_blank">Marden, South Australia, Australia</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/boise-idaho-temple?lang=eng" target="_blank">Boise, Idaho, United States</a></li>
-            </ul>
-        </main>
-        <aside class="box">
+        <div class="grid">
+            <main>
+                <h1>Joseph Israel | WDD 130</h1>
+                <img src="images/profile.webp" alt="A picture image of Joseph" width="200">
+                <p>Hello! My name is Joseph Israel, </p>
+                <p>I am from Nigeria and i am residing in the United Arab Emirates, I love to meet new people and today iam very happy to welcome you to my web page. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores provident quaerat, ipsam eveniet esse facere eaque doloribus laboriosam minima sunt molestias similique officiis maxime ea suscipit atque, quas nihil est! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem reiciendis a recusandae culpa saepe sapiente rem blanditiis quia vel officia aliquid molestiae ut inventore, consequatur perferendis est illum possimus eius.</p>
+                <ul class="box">
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple?lang=eng" target="_blank">Aba Nigeria Temple</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/adelaide-australia-temple?lang=eng" target="_blank">Marden, South Australia, Australia</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/boise-idaho-temple?lang=eng" target="_blank">Boise, Idaho, United States</a></li>
+                </ul>
+            </main>
+            <aside class="box">
 
-            <h2>Abu Dhabi</h2>
-            <img src="images/abudhabi.webp" alt="image of abudhabi city">
-            <p>Abu Dhabi, the capital of the United Arab Emirates, sits off the mainland on an island in the Persian (Arabian) Gulf. Its focus on oil exports and commerce is reflected by the skylines modern towers and shopping megacenters such as Abu Dhabi and Marina malls.</p>
-        </aside>
+                <h2>Abu Dhabi</h2>
+                <img src="images/abudhabi.webp" alt="image of abudhabi city">
+                <p>Abu Dhabi, the capital of the United Arab Emirates, sits off the mainland on an island in the Persian (Arabian) Gulf. Its focus on oil exports and commerce is reflected by the skylines modern towers and shopping megacenters such as Abu Dhabi and Marina malls.</p>
+            </aside>
+        </div>
         <footer>
             <p>©2023 🌴 Joseph Israel 🌴 Abu Dhabi, United Arab Emirates</p>
         </footer>
