--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <nav>
-                <a href="#">Home</a>
+                <a href="quiz.html">Quiz</a>
                 <a href="wwr/about.html">About Us</a>
                 <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
                 <a href="https://www.linkedin.com">linkedin</a>
