--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -125,7 +125,12 @@
         </main>
 
         <footer class="flex5">
-            <p>©2023 🌴 Joseph Israel 🌴 Life Adventure</p>     
+            <p>©2023 🌴 Joseph Israel 🌴 Life Adventure</p> 
+            <nav class="wire"> 
+                <a href="contact-wireframe.html">contact-wireframe</a>   
+
+            </nav> 
+              
             <nav class="sociallinks">
                 <a href="https://www.facebook.com/">
                     <img src="images/facebook.png" alt="facebook" width="50">
