--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,7 +14,7 @@
             <nav>
                 <a href="index.html">Home wwr</a>
                 <a href="about.html">About Us</a>
-                <a href="trips.htm">Trips</a>
+                <a href="trips.html">Trips</a>
                 <a href="contact.html">Contact Us</a>
             </nav>
         </header>
