--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Rafting Site Plan | Joseph Israel</title>
+        <title> About Us page |  life Adventure Rafting company</title>
         <meta name="description" content="Rafting project to provide student with blue print of website development">
         <meta name="author" content="Joseph israel">
         <link rel="stylesheet" href="styles/rafting.css">
