--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contact | life Adventure Rafting company</title>
+        <title>Contact Us page | life Adventure Rafting company</title>
         <meta name="description" content="This is an official contact page for the Life Adventure Rafting company">
         <meta name="author" content="Joseph israel">
         <link rel="stylesheet" href="styles/rafting.css">
